# gitswitch

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  UPDATER_SETUP.md
releases/: gitswitch_0.1.0_x64-setup.exe.sha256  gitswitch_0.1.0_x64_en-US.msi  gitswitch_0.1.0_x64_en-US.msi.sha256
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auto_switch.rs  errors.rs  git.rs  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/commands/: detect.rs  mod.rs  profiles.rs  rules.rs
src-tauri/src/config/: store.rs
src/components/: Dashboard.tsx  DetectedProfilesList.tsx  DirectoryRules.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  KeyboardShortcutsHelp.test.tsx  KeyboardShortcutsHelp.tsx  Layout.test.tsx  Layout.tsx  ProfileCard.tsx  ProfileEditor.test.ts  ProfileEditor.tsx  RepoLocalConfigResults.test.tsx  RepoLocalConfigResults.tsx  Settings.tsx
src/components/ui/: ConfirmModal.test.tsx  ConfirmModal.tsx  Skeleton.test.tsx  Skeleton.tsx  Toaster.test.tsx  Toaster.tsx  useToast.test.tsx  useToast.tsx
src/hooks/: useDebounce.test.ts  useDebounce.ts
src/stores/: useProfileStore.test.ts  useProfileStore.ts
src/styles/: index.css
src/utils/: error.test.ts  error.ts  validation.test.ts  validation.ts
